Rework the main menu to have a display bar on the left and be correctly displayed on mobile and desktop

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,4 @@
-.icon-2x {
-    transform: scale(1.8);
-}
+
 
 .toolbar {
   width: 100%;
@@ -10,8 +8,23 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+
 }
 
-.logo {
-  font-size: 1.3rem;
+
+
+.sidenav {
+  background: #6b003f;
+  color: white;
+  display: flex;
+}
+
+@media all and (min-width: 800px) {
+  .mainApp {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100vh;
+
+  }
 }
